Se agrega ejercicio 27 y 28 de el practico 2

--- a/Practico 2/Ejercicio 27.html
+++ b/Practico 2/Ejercicio 27.html
@@ -20,11 +20,14 @@ Si la distancia es entre 1 y 4 se despliega el texto "muy pero muy cerca".
 Ej.: Si el número a adivinar es el y el jugador ingresa el 91 el texto que se despliega es "cada vez más cerca" Al finalizar mostrar la cantidad de intentos que llevó adivinar el número.
 Utilizando el método random de la clase Math se puede resolver el mismo problema pero con un número aleatorio generado por la aplicación, de esta forma se podría jugar "contra la computadora"</h1>
 
-
-<label for="txtNumero">Ingresar numero</label>
-<input type="text" id="txtNumero"><br>
-
-<input type="button" id="btnIngrsar" value="Ingresar"><br>
+<h1>Jugador 1:</h1>
+<label for="txtNumero1">Ingresar numero</label>
+<input type="text" id="txtNumero1"><br>
+<input type="button" id="btnGuardar" value="Guardar"><br>
+<h1>Jugador 2:</h1>
+<label for="txtNumero2">Ingresar numero</label>
+<input type="text" id="txtNumero2"><br>
+<input type="button" id="btnAdivinar" value="Adivinar"><br>
 
 <p id="pResultado"></p>
 <script src="Ejercicio 27.js"></script>
