--- a/Practico 3/Ejercicio 9.html
+++ b/Practico 3/Ejercicio 9.html
@@ -5,6 +5,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Pedir dos números y utilizando solamente sumas y estructuras repetitivas, implementar el producto de esos dos números.</h1>
+<label for="txtNumero1">Numero 1:</label>
+<input type="text" id="txtNumero1"><br>
+
+<label for="txtNumero2">Numero 2:</label>
+<input type="text" id="txtNumero2"><br>
+
+<input type="button" id="btnCalcular" value="Calcular"> 
+    <p id="pResultado"></p>
     <script src="Ejercicio 9.js"></script>
 </body>
 </html>
