--- a/Practico 3/index.html
+++ b/Practico 3/index.html
@@ -5,6 +5,31 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <h1>Practico 4</h1><br>
+    <H2>ESTRUCTURAS DE CONTROL REPETITIVAS</H2><br>
     
+    <a href="Ejercicio 1.html">Ejercicio 1</a><br>
+    <a href="Ejercicio 2.html">Ejercicio 2</a><br>
+    <a href="Ejercicio 3.html">Ejercicio 3</a><br>
+    <a href="Ejercicio 4.html">Ejercicio 4</a><br>
+    <a href="Ejercicio 5.html">Ejercicio 5</a><br>
+    <a href="Ejercicio 6.html">Ejercicio 6</a><br>
+    <a href="Ejercicio 7.html">Ejercicio 7</a><br>
+    <a href="Ejercicio 8.html">Ejercicio 8</a><br>
+    <a href="Ejercicio 9.html">Ejercicio 9</a><br>
+    <a href="Ejercicio 10.html">Ejercicio 10</a><br>
+    <a href="Ejercicio 11.html">Ejercicio 11</a><br>
+    <a href="Ejercicio 12.html">Ejercicio 12</a><br>
+    <a href="Ejercicio 13.html">Ejercicio 13</a><br>
+    <a href="Ejercicio 14.html">Ejercicio 14</a><br>
+    <a href="Ejercicio 15.html">Ejercicio 15</a><br>
+    <a href="Ejercicio 16.html">Ejercicio 16</a><br>
+    <a href="Ejercicio 17.html">Ejercicio 17</a><br>
+    <a href="Ejercicio 18.html">Ejercicio 18</a><br>
+
+
+
 </body>
 </html>
