Se completo practico de strings y inicio de funciones

--- a/Practico 4/Ejercicio 10.html
+++ b/Practico 4/Ejercicio 10.html
@@ -5,8 +5,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Ingresar un texto con letras y números y mostrar la suma de los números dentro del texto.
 
-    <script src="Ejercicio 10.js"></script>
+Dado el texto: L4 l3tr4 m4g1c4    deberá mostrar el resultado de la suma 4+3+4+4+1+4=20</h1><br>
+
+<label for="txtTexto">Ingrese aqui</label>
+<input type="text" id="txtTexto"><br>
+
+<input type="button" id="btnCalcular" value="Calcular"><br>
+
+<p id="pResultado"></p>
+
+
+<script src="Ejercicio 10.js"></script>
 </body>
 </html>
