Se agrega practico 4 completo

--- a/Practico 4/funciones ejercicio 3.html
+++ b/Practico 4/funciones ejercicio 3.html
@@ -2,10 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 3</title>
 </head>
 <body>
-    <h1>Crear una función que reciba como parámetro un texto y lo devuelva invertido.</h1>
-    <script src="funciones ejercicio 3.js"></script>
+    <h1>Crear una función calcularAreaTriangulo, que reciba como parámetro base y altura y devuelva el área del triángulo.
+Se recomienda invocar posteriormente a esta función para verificar su correcto funcionamiento.
+Se debe validar que ambos valores sean numéricos positivos, en caso contrario devolver -1.</h1>
+<script src="Funciones ejercicio 3.js"></script>
 </body>
 </html>
