--- a/Practico 4/funciones ejercicio 7.html
+++ b/Practico 4/funciones ejercicio 7.html
@@ -5,9 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Crear una función que reciba como parámetro un valor de temperatura y convierta ese valor (en Celsius) a Fahrenheit.
-
-</h1>
-<script src="Funciones ejercicio 4.js"></script>
+    <h1>Crear una función que reciba como parámetro un texto y lo devuelva invertido.</h1>
+    <script src="funciones ejercicio 7.js"></script>
 </body>
 </html>
