--- a/Practico 4/index funciones.html
+++ b/Practico 4/index funciones.html
@@ -5,6 +5,16 @@
     <title>Document</title>
 </head>
 <body><h1>Ejercicios</h1>
+<a href="Funciones ejercicio 1.html">Ejercicio 1</a><br>
+<a href="Funciones ejercicio 2.html">Ejercicio 2</a><br>
+<a href="Funciones ejercicio 3.html">Ejercicio 3</a><br>
+<a href="Funciones ejercicio 4.html">Ejercicio 4</a><br>
+<a href="Funciones ejercicio 5.html">Ejercicio 5</a><br>
+<a href="Funciones ejercicio 6.html">Ejercicio 6</a><br>
+<a href="Funciones ejercicio 7.html">Ejercicio 7</a><br>
+<a href="Funciones ejercicio 8.html">Ejercicio 8</a><br>
+<a href="Funciones ejercicio 9.html">Ejercicio 9</a><br>
+<a href="Funciones ejercicio 10.html">Ejercicio 10</a><br>
 
 
 
